Change to Gradle 7 and Java 16